trabalho-desenvolvimento de web

--- a/index.html
+++ b/index.html
@@ -5,34 +5,66 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>Advocacia Aurora</title>
   <link rel="icon" href="images/favicon.png">
+  
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+  
   <link rel="stylesheet" href="estilos/style.css">
 </head>
 <body>
-<header>
-  <div class="header-inner">
-    <div class="logo">
-      <img src="./logo.png" alt="logo">
-      <h1>Escritorio de Advocacia Aurora</h1>
-    </div>
-    <nav>
-      <ul>
-        <li><a href="index.html">Início</a></li>
-        <li><a href="about.html">Quem Somos</a></li>
-        <li><a href="services.html">Áreas</a></li>
-        <li><a href="gallery.html">Galeria</a></li>
-        <li><a href="contact.html">Contato</a></li>
-      </ul>
-    </nav>
-  </div>
-</header>
 
-<section class="banner">
-  <div class="overlay">
-    <h2>Expertise, Confiança e Resultados</h2>
-    <p>Escritório Aurora oferece consultoria jurídica completa em direito civil, trabalhista, empresarial e tributário.</p>
-    <p>Uma empresa movida pelo bem estar de nossos clientes, estamos a disposição para ajudar em problemas jurídicos.</p>
+<nav class="navbar navbar-expand-lg navbar-dark sticky-top" style="background-color: #0e2a47; box-shadow: 0 2px 4px rgba(0,0,0,0.2);">
+  <div class="container">
+    <a class="navbar-brand d-flex align-items-center" href="index.html">
+      <img src="./logo.png" alt="logo" width="40" height="40" class="d-inline-block align-text-top me-2">
+      <span style="font-size: 1.2rem; font-weight: bold; color: #fff;">Escritorio de Advocacia Aurora</span>
+    </a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav ms-auto">
+        <li class="nav-item"><a class="nav-link active" href="index.html">Início</a></li>
+        <li class="nav-item"><a class="nav-link" href="about.html">Quem Somos</a></li>
+        <li class="nav-item"><a class="nav-link" href="services.html">Áreas</a></li>
+        <li class="nav-item"><a class="nav-link" href="gallery.html">Galeria</a></li>
+        <li class="nav-item"><a class="nav-link" href="contact.html">Contato</a></li>
+      </ul>
+    </div>
   </div>
-</section>
+</nav>
+
+<div id="carouselBanner" class="carousel slide" data-bs-ride="carousel">
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <section class="banner">
+        <div class="overlay">
+          <h2>Expertise, Confiança e Resultados</h2>
+          <p>Escritório Aurora oferece consultoria jurídica completa em direito civil, trabalhista, empresarial e tributário.</p>
+          <p>Uma empresa movida pelo bem estar de nossos clientes, estamos a disposição para ajudar em problemas jurídicos.</p>
+        </div>
+      </section>
+    </div>
+    <div class="carousel-item">
+      <section class="banner" style="background-color: #222;"> 
+        <div class="overlay">
+          <h2>Compromisso com a Justiça</h2>
+          <p>Nossa equipe está pronta para defender seus interesses com a máxima dedicação.</p>
+          <p>Entre em contato e agende sua consultoria hoje mesmo.</p>
+        </div>
+      </section>
+    </div>
+  </div>
+  <button class="carousel-control-prev" type="button" data-bs-target="#carouselBanner" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Anterior</span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#carouselBanner" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Próximo</span>
+  </button>
+</div>
+
 <main class="sections">
   <section class="section-1">
     <div class="container">
@@ -41,6 +73,33 @@
       <p>Nossa equipe possui uma ampla experiência em conflitos e consultoria preventiva para empresas de diversos portes.</p>
       <p>Valorizamos a ética profissional e moral, a transparência e a comunicação com nossos clientes.</p>
       <p>Atuamos com o foco em resultados, construindo estratégias personalizadas para cada caso.</p>
+
+      <div class="accordion mt-4" id="accordionSobre">
+        <div class="accordion-item">
+          <h2 class="accordion-header">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne">
+              Nossa Missão
+            </button>
+          </h2>
+          <div id="collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionSobre">
+            <div class="accordion-body">
+              Na Advocacia Aurora, nossa missão vai além de ganhar processos. Nós trabalhamos para antecipar problemas e blindar nossos clientes, oferecendo uma advocacia moderna que une técnica apurada com um olhar humano para as necessidades de cada negócio ou família.
+            </div>
+          </div>
+        </div>
+        <div class="accordion-item">
+          <h2 class="accordion-header">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo">
+              Nossos Valores
+            </button>
+          </h2>
+          <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionSobre">
+            <div class="accordion-body">
+              Ética, Transparência, Excelência e Comprometimento.
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </section>
 
@@ -68,7 +127,7 @@
     <div class="container">
       <h3>Contato Rápido:</h3>
       <p>Email: contato@advocaciaaurora.com.br</p>
-      <img src="./Professional_Lawyers_Office.jpg" class="responsive" alt="Equipe">
+      <img src="./Professional_Lawyers_Office.jpg" class="responsive mb-3" alt="Equipe">
       <p class="caption">Foto da equipe.</p>
     </div>
   </section>
@@ -77,10 +136,29 @@
 <footer>
   <div class="foot-inner">
     <div>
+      <div class="social-icons mb-2">
+         <a href="https://www.facebook.com/?locale=pt_BR" target="_blank" style="color: inherit; margin: 0 10px;">
+            <i class="fab fa-facebook fa-lg"></i>
+         </a>
+
+         <a href="https://www.instagram.com/" target="_blank" style="color: inherit; margin: 0 10px;">
+            <i class="fab fa-instagram fa-lg"></i>
+         </a>
+
+         <a href="https://www.google.com/aclk?sa=L&ai=DChsSEwifiLWry7ORAxVvYUgAHcRaLtcYACICCAEQABoCY2U&ae=2&co=1&ase=2&gclid=CjwKCAiA0eTJBhBaEiwA-Pa-hVUUQPbvrnDzc8iC4rlr1gF8dgEbHNYPNb6M9b9V6tGX63XMf6T0hBoCSSUQAvD_BwE&cid=CAASZeRonDlsYtk3SKteCDujK3riXdbWOBKDeaaz6U5sr07f2fcLpzB9LcZXtwc7y5c9_mild7cxZNqt5yFJ3r4CJ4Q_z9Gl3IGk4gl07juPMpnTDOz1xAniI_ScerZCcKejrr7f2zSp&cce=2&category=acrcp_v1_71&sig=AOD64_2joWicf7j26qVkP8yoi288HNXHyQ&q&nis=4&adurl&ved=2ahUKEwjIha6ry7ORAxX8BbkGHdnMC-UQ0Qx6BAgNEAE" target="_blank" style="color: inherit; margin: 0 10px;">
+            <i class="fab fa-linkedin fa-lg"></i>
+         </a>
+
+         <a href="https://web.whatsapp.com/" target="_blank" style="color: inherit; margin: 0 10px;">
+            <i class="fab fa-whatsapp fa-lg"></i>
+         </a>
+      </div>
       <p> 2025 Advocacia Aurora — Todos os direitos reservados.</p>
     </div>
   </div>
 </footer>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+
 </body>
 </html>
-
